welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if (negative && a<0 && b<0){
              ^